# arcade-app-sdl

./: CMakeLists.txt  main.cpp
App/: App.cpp  App.h
Assets/: BreakoutLevels.txt
Games/: Game.h
Games/BreakOut/: Ball.cpp  Ball.h  Block.cpp  Block.h  BoundaryEdge.h  BreakOut.cpp  BreakOut.h  BreakOutGameLevel.cpp  BreakOutGameLevel.h  Excluder.cpp  Excluder.h  LevelBoundary.cpp  LevelBoundary.h  Paddle.cpp  Paddle.h
Graphics/: BMPImage.cpp  BMPImage.h  Color.cpp  Color.h  Screen.cpp  Screen.h  ScreenBuffer.cpp  ScreenBuffer.h  SpriteSheet.cpp  SpriteSheet.h
Input/: GameController.cpp  GameController.h  InputAction.h  InputController.cpp  InputController.h
Scenes/: ArcadeScene.cpp  ArcadeScene.h  GameScene.cpp  GameScene.h  Scene.h
Shapes/: AARectangle.cpp  AARectangle.h  Circle.cpp  Circle.h  Line2D.cpp  Line2D.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h
Utils/: FileCommandLoader.cpp  FileCommandLoader.h  Utils.cpp  Utils.h  Vec2D.cpp  Vec2D.h
